[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/polaris 1.png" type="Texture" id=1]
[ext_resource path="res://UI/polaris 2.png" type="Texture" id=2]
[ext_resource path="res://Login.gd" type="Script" id=3]
[ext_resource path="res://Asset/127/logo.png" type="Texture" id=4]
[ext_resource path="res://Asset/music/bgm/开机.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
void fragment(){
	vec4 _color = texture(TEXTURE,UV);
	COLOR = vec4(1.0-_color.r,1.0-_color.g,1.0-_color.b,1.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "anim"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Login" type="Node2D"]
script = ExtResource( 3 )

[node name="Polaris1" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="Polaris2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Edit1" type="LineEdit" parent="."]
visible = false
material = SubResource( 2 )
margin_left = 1031.0
margin_top = 596.0
margin_right = 1211.0
margin_bottom = 633.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false

[node name="Edit2" type="LineEdit" parent="."]
visible = false
material = SubResource( 2 )
margin_left = 1031.0
margin_top = 657.0
margin_right = 1211.0
margin_bottom = 694.0
secret = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/anim = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "BGM"

[connection signal="text_entered" from="Edit2" to="." method="_on_Edit2_text_entered"]
